@@ -13,7 +13,8 @@ Version 1.3.1+svn:
     * Improved the look of the main menu and tips of the day boxes in the title
       screen.
     * Added new experimental new unit location in the hex.
-  * Units changes and balancing:
+    * Added some more speed optimizations.
+* Units changes and balancing:
     * Converted the cold resistance of the Elvish Sorceress line to a holy
       resistance.
     * Decreased the holy resistance of the Orcish Assassin line to 0%.
