@@ -17,6 +17,7 @@
 class display;
 
 #include "map.hpp"
+#include <set>
 #include <string>
 
 namespace halo
@@ -29,14 +30,6 @@ struct manager
 
 private:
 	display* const old;
-};
-
-struct halo_hider
-{
-	halo_hider();
-	~halo_hider();
-private:
-	bool old;
 };
 
 enum ORIENTATION { NORMAL, HREVERSE, VREVERSE, HVREVERSE };
@@ -64,10 +57,11 @@ struct remover
 	void operator()(int handle) const { remove(handle); }
 };
 
-///functions to render and unrender all haloes. Should
-///be called immediately before/after flipping the screen
+///functions to render and unrender haloes. Which haloes are rendered 
+// is determined by invalidated_locations and the internal state in
+// the control sets (in halo.cpp)
+void unrender(std::set<gamemap::location> invalidated_locations);
 void render();
-void unrender();
 
 }
 
