@@ -15,7 +15,9 @@ Version 1.3.1+svn:
    * added new experimental new unit location in the hex
    * tiles with overlays are also properly shown if compiled with
      --enable-tinygui (bug #8720 patch #697)
- * language and i18n:
+   * rewrote the halo render engine which solves a few minor glitches but 
+     most importantly speeds up the drawing of the halos.
+* language and i18n:
    * updated translations: Bulgarian, Czech, Danish, Dutch, French, German,
      Hungarian, Italian, Norwegian, Portuguese (Brazil)
    * new translations: Indonesian
